# VCPToolBox

./: .gitignore  .node-version  .workspaceignore  Claude5品鉴VCP 6.4后的评价.md  DEPLOYMENT.md  Dockerfile  VCP插件开发规范指南.md  VCP聚合文档.md  check-vcp-toolbox.bat  config.env.example  config.local.env  config.local.env.example  docker-compose.yml  ecosystem.config.js  migrate-config.js  package-lock.json  package.json  plugin-manifest-inventory.json  pyproject.toml  restart_vcp_pm2.bat  restart_vcp_pm2_local.bat  server.js  start_server.bat  start_vcp_pm2.bat  start_vcp_pm2_local.bat  stop_vcp_pm2.bat  stop_vcp_pm2_local.bat  新建 文本文档.md  新建 文本文档.txt
.claude/: settings.local.json
.history/: .gitignore_20250805102737  .gitignore_20250805105347  .gitignore_20250810211648  .gitignore_20250810211649  .gitignore_20250829170329  .gitignore_20250829170331  .gitignore_20250829170431  Dockerfile_20250729124239  Dockerfile_20250729124253  Dockerfile_20250729124311  Dockerfile_20250813170233  config.docker_20250729121556.env  config.docker_20250729121558.env  config.docker_20250729121600.env  config.docker_20250729121604.env  config.docker_20250804115142.env  config.docker_20250804115158.env  config.docker_20250804115204.env  config.docker_20250804115208.env  config.docker_20250804115228.env  config.docker_20250804115239.env  config.docker_20250804115349.env  config.docker_20250804115410.env  config.docker_20250804115412.env  config.docker_20250804115419.env  config.docker_20250804115505.env  config.docker_20250804115507.env  config.docker_20250804115518.env  config.docker_20250804115534.env  (+130 more)
(+1475 files in other folders)
